correct slide to avoird overflowing

--- a/styles/slideStyles.css
+++ b/styles/slideStyles.css
@@ -1,6 +1,6 @@
 .slider {
   position: relative;
-  /* overflow:hidden */
+  overflow:hidden
 }
 
 .slider__controls {
